<resources>
    <string name="app_name">Kiddos</string>
    <string name="continuebtn">Continue</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="tidak_punya_akun">Don’t have an account? Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen">This is the Splash Screen</string>
    <string name="email_required">Email diperlukan</string>
    <string name="password_required">Kata sandi diperlukan</string>
    <string name="password_min_length">Kata sandi harus memiliki setidaknya 8 karakter</string>
    <string name="login_success">Login berhasil</string>
    <string name="name_required">Name required</string>
    <string name="password_mismatch">Password don\'t match</string>
    <string name="register_successful">Register success</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="logout_confirmation_yes">Yes</string>
    <string name="logout_confirmation_no">No</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="reset_password_confirmation_title">Reset Password</string>
    <string name="reset_password_confirmation_message">Are you sure you want to reset the password for %1$s?</string>
    <string name="reset_password_button_yes">Yes</string>
    <string name="reset_password_button_no">No</string>
    <string name="failed_to_send_reset_link">Failed to send reset link</string>
    <string name="request_failed">Request failed: %1$s</string>
    <string name="home_welcome_text">Selamat Datang Kiddos Lovers. Ayo Pelajari Makananmu!</string>
    <string name="button_continue_signup">Continue</string>
    <string name="signup_title">Sign Up</string>
    <string name="name_hint_signup">Name</string>
    <string name="email_hint_signup">Email</string>
    <string name="password_hint_signup">Password</string>
    <string name="guest">Guest</string>
    <string name="karbohidrat">Karbohidrat</string>
    <string name="_30g">30g</string>
    <string name="fruit_loops">Fruit Loops</string>
    <string name="description_history">Lorem ipsum dolor sit amet in dalar tu simo.</string>
    <string name="date_history">24 Juni 2024</string>
    <string name="button_delete_history">button_delete_history</string>
    <string name="image_article">gambar artikel</string>
    <string name="article_title">title</string>
    <string name="date_article">Date</string>
    <string name="article_description">description</string>
    <string name="button_back_detail_article">button kembali ke home</string>
    <string name="article_content">Content</string>
    <string name="article_created_at">Created At</string>
    <string name="article_detail_title">Article Title</string>
    <string name="detail_image_article">detail image article</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="scan_photo">Scan</string>
    <string name="image_for_scan">image yang akan di scan</string>
    <string name="scan_your_fodies">Scan Makananmu</string>
    <string name="account_detail">Detail Akun</string>
    <string name="setting">Pengaturan</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="log_out">Log Out</string>
    <string name="guest_name">Tzuyu</string>
    <string name="hello_guest">Hello,</string>
    <string name="button_scan_home">SCAN</string>
    <string name="find_foods">Temukan Makanan Terbaik</string>
    <string name="food_nutrition_recycler">food nutrition</string>
    <string name="best_article">Artikel Terbaik</string>
    <string name="recycler_article">artikel makanan</string>
    <string name="profile_image">profile image</string>
    <string name="apple_icon">apple icon</string>
    <string name="profile_image_home">profile image icon</string>
    <string name="scan_border">scan icon</string>
    <string name="notification_title">Notifikasi</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="notification_description">Aktifkan peningat harian</string>
    <string name="setting_title">Pengaturan</string>
    <string name="food_title_scan">Sawi</string>
    <string name="button_home_result">Home</string>
    <string name="button_translation">Translation</string>
    <string name="button_speech_translation">Translation Speech</string>
    <string name="result_description">Pada bagian ini berisikan khasiat dari makanan jika ada khasiat untuk tubuh agar anak kecil itu paham, sedikit aja kok.</string>
    <string name="button_back_in_result">tombol kembali di result</string>
    <string name="image_result">image result</string>
    <string name="button_rescan">Rescan</string>
    <string name="food_title_scan_btm">Sawi</string>
    <string name="result_food_nutrition">food nutrition</string>
    <string name="register_title">Sign Up</string>
    <string name="retype_password">Retype Password</string>
    <string name="insert_password">Insert Password</string>
    <string name="no_account">Don’t have an account? Sign Up</string>
    <string name="account_detail_title">Detail Akun</string>
    <string name="button_change_password">Ubah Password</string>
    <string name="Detail_name_title">Nama</string>
    <string name="save_changes">Simpan</string>
    <string name="Detail_email_title">Email</string>
    <string name="food_list_title">Makanan</string>
    <string name="food_card_title">title</string>
    <string name="food_card_description">description in this are description</string>
    <string name="image_food_card">image for food card</string>
    <string name="vegies">Sayur</string>
    <string name="fruits">Buah</string>
    <string name="foodies">Makanan</string>
</resources>