<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvSignInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourgummy_medium"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textColor="@color/Purple900"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_edittext" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/Purple900"
        android:textSize="14sp"
        android:layout_gravity="end"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/OrangePill"
        android:text="@string/continuebtn"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/ivCharacterLogin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/pear_character"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tidak_punya_akun"
        android:textColor="#4A148C"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
