<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.bangkit.kiddos_android.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="org.bangkit.kiddos_android.ui.fragment.HistoriFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_histori" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="org.bangkit.kiddos_android.ui.fragment.ScanFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="org.bangkit.kiddos_android.ui.fragment.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>