<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp"
    android:paddingBottom="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#E9F3ED"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="110dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:strokeColor="#E9F3ED">

                    <ImageView
                        android:id="@+id/imageEvent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/purpleKiddos"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fruit_loops_placeholder"
                        android:transitionName="sharedImage"
                        tools:ignore="ImageContrastCheck" />
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/date_history"
                    android:textColor="@color/purpleKiddos"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/fruit_loops"
                    android:textColor="@color/purpleKiddos"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:transitionName="sharedName" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/inter_medium"
                    android:maxLines="2"
                    android:text="@string/description_history"
                    android:textColor="@color/purpleKiddos"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/iconDelete"
                    style="@style/OrangeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="1dp"
                    app:icon="@drawable/ic_delete"
                    app:iconGravity="textStart"
                    android:background="@drawable/button_orange"
                    android:backgroundTint="@color/orangePill"
                    android:contentDescription="@string/button_delete_history"
                    android:fontFamily="@font/inter_bold"
                    android:src="@drawable/ic_delete"
                    android:text="@string/hapus"
                    app:tint="@color/white"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>